--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "start": "next start"
   },
   "dependencies": {
+    "mongoose": "^5.11.17",
     "next": "10.0.4",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "swr": "^0.4.2"
   },
   "devDependencies": {
     "@types/node": "^14.14.16",
