--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "start": "next start"
   },
   "dependencies": {
+    "chrome-aws-lambda": "^10.0.0",
     "mongoose": "^5.11.17",
     "next": "10.0.4",
+    "puppeteer-core": "^10.0.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "styled-components": "^5.3.0",
