--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "chrome-aws-lambda": "^10.0.0",
     "mongoose": "^5.11.17",
-    "next": "10.0.4",
+    "next": "^10.2.3",
     "puppeteer-core": "^10.0.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
