--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
   },
   "dependencies": {
     "chrome-aws-lambda": "^10.0.0",
+    "download-chromium": "^2.2.1",
     "mongoose": "^5.11.17",
     "next": "^10.2.3",
     "puppeteer-core": "^10.0.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "styled-components": "^5.3.0",
-    "swr": "^0.4.2"
+    "swr": "^0.4.2",
+    "vercel": "^23.0.0"
   },
   "devDependencies": {
     "@types/node": "^14.14.16",
