--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "chrome-aws-lambda": "^10.0.0",
     "mongoose": "^5.11.17",
     "next": "10.0.4",
+    "puppeteer": "^10.0.0",
     "puppeteer-core": "^10.0.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
