--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "chrome-aws-lambda": "^10.0.0",
     "mongoose": "^5.11.17",
     "next": "10.0.4",
-    "puppeteer": "^10.0.0",
-    "puppeteer-core": "^10.0.0",
+    "playwright": "^1.12.2",
+    "playwright-aws-lambda": "^0.7.0",
+    "playwright-core": "^1.12.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "styled-components": "^5.3.0",
