--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "postinstall": "playwright install; echo FIM"
   },
   "dependencies": {
     "mongoose": "^5.11.17",
