--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   "scripts": {
     "dev": "DEBUG=crawler next dev",
     "build": "next build",
-    "start": "next start",
-    "postinstall": "node node_modules/playwright/install.js && cp -r $HOME/.cache/ms-playwright ./node_modules/"
+    "start": "next start"
   },
   "dependencies": {
+    "axios": "^0.21.1",
+    "cheerio": "^1.0.0-rc.10",
     "mongoose": "^5.11.17",
     "next": "10.0.4",
-    "playwright": "^1.12.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "styled-components": "^5.3.0",
