--- a/.github/workflows/uptime.yml
+++ b/.github/workflows/uptime.yml
@@ -10,4 +10,4 @@ jobs:
     - name: curl
       uses: wei/curl@master
       with:
-        args: -L https://trending5-front.colantuomo.vercel.app
+        args: https://trending5-front-colantuomo.vercel.app/
