--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.0.1",
     "axios": "^0.21.1",
     "cheerio": "^1.0.0-rc.10",
     "mongoose": "^5.11.17",
